Fixed cls for filters on mobile. Fixed issue that taxes appear while loading and then disappear, added ConfigDispatcher to preload

--- a/packages/scandipwa/src/component/CategoryFilterOverlay/CategoryFilterOverlay.style.scss
+++ b/packages/scandipwa/src/component/CategoryFilterOverlay/CategoryFilterOverlay.style.scss
@@ -229,6 +229,10 @@
 
         &-Placeholders {
             min-height: 200px;
+
+            @include mobile {
+                min-height: 0px;
+            }
         }
     }
 }
